TATI_analysis_PYTHON = \
    analyser_modules.py \
    averageenergieswriter.py \
    averagetrajectorywriter.py \
    covariance.py \
    covariance_perwalker.py \
    diffusionmap.py \
    freeenergy.py \
    integratedautocorrelation.py \
    integratedautocorrelation_perwalker.py \
    parsedrunfile.py \
    parsedtrajectory.py \
	__init__.py

TATI_analysisdir = $(pythondir)/TATi/analysis
