TATI_samplers_PYTHON = \
    baoabsampler.py \
	gradientdescent.py \
	geometriclangevinalgorithmfirstordersampler.py \
	geometriclangevinalgorithmsecondordersampler.py \
	hamiltonianmontecarlosampler.py \
	infinitswitchsimulatedtemperingsampler.py \
	stochasticgradientlangevindynamicssampler.py \
	__init__.py

TATI_samplersdir = $(pythondir)/TATi/samplers
