TATI_samplers_PYTHON = \
    baoabsampler.py \
    covariancecontrolledadaptivelangevinthermostatsampler.py \
	gradientdescent.py \
	geometriclangevinalgorithmfirstordersampler.py \
	geometriclangevinalgorithmsecondordersampler.py \
	hamiltonianmontecarlosampler.py \
	replicaoptimizer.py \
	stochasticgradientlangevindynamicssampler.py \
	__init__.py

TATI_samplersdir = $(pythondir)/TATi/samplers
